# arxivate

./: .gitignore  LICENSE  README.md  arxivate.py  pyproject.toml
