[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "arxivate"
version = "0.1.0"
description = "Prepare a LaTeX project for arXiv submission"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
arxivate = "arxivate:app"

[tool.setuptools]
py-modules = ["arxivate"]
